--- a/index.html
+++ b/index.html
@@ -26,26 +26,64 @@
         <header class="header">
             <div class="text-vertical-center">
                 <h1>levii Inc.</h1>
-                <h3>Lorem Ipsum Dolor Sit Amet</h3>
+                <p>Lorem Ipsum Dolor Sit Amet</p>
             </div>
         </header>
 
         <!-- Products -->
         <section class="products">
             <div class="text-center">
-                <h2>Our Products</h2>
-                <p>BALUS</p>
-            </div>
+                <h2>Products</h2>
+            <div>
+            <a href="http://balus.me"><img src="img/BALUS_logo.png" class="img-responsive center-block" alt="BALUS Logo"></a>
         </section>
 
         <!-- Company -->
         <section class="company">
             <div class="text-center">
                 <h2>Company</h2>
-                <p>levii Inc.</p>
-                <p>May 16, 2016</p>
-                <p>4-1-3, Hongo, Bunkyo-ku, Tokyo 113-0033 Japan</p>
-                <p>Yohsuke Nambu</p>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-4 col-sm-2 col-sm-offset-3">
+                        <h4>Name</h4>
+                    </div>
+                    <div class="col-xs-8 col-sm-7">
+                        <h4>levii Inc.</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-4 col-sm-2 col-sm-offset-3">
+                        <h4>Founded</h4>
+                    </div>
+                    <div class="col-xs-8 col-sm-7">
+                        <h4>May 20, 2016</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-4 col-sm-2 col-sm-offset-3">
+                        <h4>Address</h4>
+                    </div>
+                    <div class="col-xs-8 col-sm-7">
+                        <h4>4-1-3 7F Hongo, Bunkyo-ku Tokyo 123-4567 Japan</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-4 col-sm-2 col-sm-offset-3">
+                        <h4>President</h4>
+                    </div>
+                    <div class="col-xs-8 col-sm-7">
+                        <h4>Yohsuke Nambu</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-4 col-sm-2 col-sm-offset-3">
+                        <h4>Contact</h4>
+                    </div>
+                    <div class="col-xs-8 col-sm-7">
+                        <h4>contact@levii.co.jp</h4>
+                    </div>
+                </div>
             </div>
         </section>
 
