ファビコンの追加、フォントの変更

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <link href="css/bootstrap.min.css" rel="stylesheet">
 
         <!-- levii -->
+        <link rel="icon" href="favicon.ico">
+        <link href='https://fonts.googleapis.com/css?family=Work+Sans:100' rel='stylesheet' type='text/css'>
         <link href="css/levii.css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -35,7 +37,10 @@
             <div class="text-center">
                 <h2>Products</h2>
             <div>
-            <a href="http://balus.me"><img src="img/BALUS_logo.png" class="img-responsive center-block" alt="BALUS Logo"></a>
+            <a href="https://app.balus.me"><img src="img/BALUS_logo.png" class="img-responsive center-block" alt="BALUS Logo"></a>
+            <div class="text-center">
+                <h1>BALUS</h1>
+            <div>
         </section>
 
         <!-- Company -->
