--- a/index.html
+++ b/index.html
@@ -35,60 +35,35 @@
 
         <!-- Products -->
         <section class="products">
-            <div class="text-center">
+            <div class="text-vertical-center">
                 <h2>Products</h2>
-            <div>
-            <a href="https://app.balus.me"><img src="img/BALUS_logo.png" class="img-responsive center-block" alt="BALUS Logo"></a>
-            <div class="text-center">
-                <h1>BALUS</h1>
+                <a href="https://app.balus.me" target="_blank"><img src="img/BALUS_logo.png" class="img-responsive center-block" alt="BALUS Logo"></a>
+                <h3><a href="https://app.balus.me" target="_blank">BALUS</a></h3>
             <div>
         </section>
 
         <!-- Company -->
         <section class="company">
-            <div class="text-center">
+            <div class="text-vertical-center">
                 <h2>Company</h2>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-4 col-sm-2 col-sm-offset-3">
-                        <h4>Name</h4>
-                    </div>
-                    <div class="col-xs-8 col-sm-7">
-                        <h4>levii Inc.</h4>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-4 col-sm-2 col-sm-offset-3">
-                        <h4>Founded</h4>
-                    </div>
-                    <div class="col-xs-8 col-sm-7">
-                        <h4>May 20, 2016</h4>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-4 col-sm-2 col-sm-offset-3">
-                        <h4>Address</h4>
-                    </div>
-                    <div class="col-xs-8 col-sm-7">
-                        <h4>4-1-3 7F Hongo, Bunkyo-ku Tokyo 113-0033 Japan</h4>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-4 col-sm-2 col-sm-offset-3">
-                        <h4>President</h4>
-                    </div>
-                    <div class="col-xs-8 col-sm-7">
-                        <h4>Yohsuke Nambu</h4>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-4 col-sm-2 col-sm-offset-3">
-                        <h4>Contact</h4>
-                    </div>
-                    <div class="col-xs-8 col-sm-7">
-                        <h4>contact@levii.co.jp</h4>
-                    </div>
+                <div class="company-info">
+                    <table class="table">
+                        <tr>
+                            <td class="company-info-left">Name</td><td class="company-info-right">levii Inc.</td>
+                        </tr>
+                        <tr>
+                            <td class="company-info-left">Founded</td><td class="company-info-right">May 17, 2016</td>
+                        </tr>
+                        <tr>
+                            <td class="company-info-left">Address</td><td class="company-info-right">4-1-3 Hongo, Bunkyo-ku, Tokyo 113-0033 Japan</td>
+                        </tr>
+                        <tr>
+                            <td class="company-info-left">CEO</td><td class="company-info-right">Yohsuke Nambu</td>
+                        </tr>
+                        <tr>
+                            <td class="company-info-left">Contact</td><td class="company-info-right">contact@levii.co.jp</td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </section>
