OGPタグの整理

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <link rel="canonical" href="https://levii.co.jp">
-        <title>levii</title>
+        <title>levii Inc.</title>
 
-        <meta property="og:title" content="levii">
-        <meta property="og:type" content="website">
+        <!-- Open Graph protocol -->
         <meta property="og:url" content="https://levii.co.jp">
+        <meta property="og:title" content="The title of your article without any branding such as your site name.">
+        <meta property="og:description" content="A brief description of the content, usually between 2 and 4 sentences. This will displayed below the title of the post on Facebook.">
+        <meta property="og:site_name" content="levii Inc.">
         <meta property="og:image" content="https://levii.co.jp/img/og.jpg">
-        <meta property="og:description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.">
 
         <!-- Bootstrap -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
