暫定版のコピーに修正

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
         <!-- Open Graph protocol -->
         <meta property="og:url" content="https://levii.co.jp">
-        <meta property="og:title" content="The title of your article without any branding such as your site name.">
-        <meta property="og:description" content="A brief description of the content, usually between 2 and 4 sentences. This will displayed below the title of the post on Facebook.">
+        <meta property="og:title" content="levii Inc.">
+        <meta property="og:description" content="Rejoice with the birds in the coming of spring.">
         <meta property="og:site_name" content="levii Inc.">
         <meta property="og:image" content="https://levii.co.jp/img/og.jpg">
 
@@ -36,7 +36,7 @@
         <header class="header">
             <div class="text-vertical-center">
                 <h1>levii Inc.</h1>
-                <p>Lorem Ipsum Dolor Sit Amet</p>
+                <p>Rejoice with the birds in the coming of spring.</p>
             </div>
         </header>
 
@@ -68,7 +68,7 @@
                             <td class="company-info-left">CEO</td><td class="company-info-right">Yohsuke Nambu</td>
                         </tr>
                         <tr>
-                            <td class="company-info-left">Contact</td><td class="company-info-right">contact@levii.co.jp</td>
+                            <td class="company-info-left">Contact Us</td><td class="company-info-right">contact@levii.co.jp</td>
                         </tr>
                     </table>
                 </div>
