--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- Open Graph protocol -->
         <meta property="og:url" content="https://levii.co.jp">
         <meta property="og:title" content="levii Inc.">
-        <meta property="og:description" content="Rejoice with the birds in the coming of spring.">
+        <meta property="og:description" content="Find value and fun in complexity.">
         <meta property="og:site_name" content="levii Inc.">
         <meta property="og:image" content="https://levii.co.jp/img/og.jpg">
 
@@ -36,7 +36,7 @@
         <header class="header">
             <div class="text-vertical-center">
                 <h1>levii Inc.</h1>
-                <p>Rejoice with the birds in the coming of spring.</p>
+                <p>Find value and fun in complexity.</p>
             </div>
         </header>
 
