コピーの修正

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- Open Graph protocol -->
         <meta property="og:url" content="https://levii.co.jp">
         <meta property="og:title" content="levii Inc.">
-        <meta property="og:description" content="Find value and fun in complexity.">
+        <meta property="og:description" content="Find values and funs in complexity.">
         <meta property="og:site_name" content="levii Inc.">
         <meta property="og:image" content="https://levii.co.jp/img/og.jpg">
 
