コピーの追加修正

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <header class="header">
             <div class="text-vertical-center">
                 <h1>levii Inc.</h1>
-                <p>Find value and fun in complexity.</p>
+                <p>Find values and funs in complexity.</p>
             </div>
         </header>
 
