--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <!-- levii -->
         <link rel="icon" href="favicon.ico">
-        <link href='https://fonts.googleapis.com/css?family=Work+Sans:100' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
         <link href="css/levii.css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
