フォルダ名の変更

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta property="og:title" content="levii Inc.">
         <meta property="og:description" content="Find values and funs in complexity.">
         <meta property="og:site_name" content="levii Inc.">
-        <meta property="og:image" content="https://levii.co.jp/img/og.jpg">
+        <meta property="og:image" content="https://levii.co.jp/images/og.jpg">
 
         <!-- Bootstrap -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
         <section class="products">
             <div class="text-vertical-center">
                 <h2>Products</h2>
-                <a href="https://app.balus.me" target="_blank"><img src="img/BALUS_logo.png" class="img-responsive center-block" alt="BALUS Logo"></a>
+                <a href="https://app.balus.me" target="_blank"><img src="images/BALUS_logo.png" class="img-responsive center-block" alt="BALUS Logo"></a>
                 <h3><a href="https://app.balus.me" target="_blank">BALUS</a></h3>
             <div>
         </section>
