--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" prefix="og: http://ogp.me/ns#">
+<html lang="ja" prefix="og: http://ogp.me/ns#">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <link rel="canonical" href="https://levii.co.jp">
-        <title>levii Inc.</title>
+        <title>株式会社レヴィ</title>
 
         <!-- Open Graph protocol -->
         <meta property="og:url" content="https://levii.co.jp">
-        <meta property="og:title" content="levii Inc.">
-        <meta property="og:description" content="Find values and funs in complexity.">
-        <meta property="og:site_name" content="levii Inc.">
+        <meta property="og:title" content="株式会社レヴィ">
+        <meta property="og:description" content="複雑さの中に価値と面白さを見つけよう。">
+        <meta property="og:site_name" content="株式会社レヴィ">
         <meta property="og:image" content="https://levii.co.jp/images/og.jpg">
 
         <!-- Bootstrap -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
 
         <!-- levii -->
-        <link rel="icon" href="favicon.ico">
-        <link href='https://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
+        <link href="favicon.ico" rel="icon">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:100,400" rel="stylesheet">
+        <link href="http://fonts.googleapis.com/earlyaccess/notosansjp.css" rel="stylesheet">
         <link href="css/levii.css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -34,51 +35,41 @@
     <body>
         <!-- Header -->
         <header class="header">
-            <div class="text-vertical-center">
-                <h1>levii Inc.</h1>
-                <p>Find values and funs in complexity.</p>
+            <div class="text-horizontal-vertical-center">
+                <h1>levii</h1>
+                <p>複雑さの中に価値と面白さを見つけよう。</p>
             </div>
         </header>
 
         <!-- Products -->
-        <section class="products">
-            <div class="text-vertical-center">
-                <h2>Products</h2>
-                <a href="https://app.balus.me" target="_blank"><img src="images/BALUS_logo.png" class="img-responsive center-block" alt="BALUS Logo"></a>
-                <h3><a href="https://app.balus.me" target="_blank">BALUS</a></h3>
-            <div>
-        </section>
+        <article class="products">
+            <section class="text-horizontal-vertical-center">
+                <h1>製品</h1>
+                <a href="https://app.balus.me" target="_blank"><img src="images/BALUS_logo.png" alt="BALUS Logo"></a>
+                <h2><a href="https://app.balus.me" target="_blank">BALUS</a></h2>
+            </section>
+        </article>
 
         <!-- Company -->
-        <section class="company">
-            <div class="text-vertical-center">
-                <h2>Company</h2>
+        <article class="company">
+            <section class="text-horizontal-vertical-center">
+                <h1>leviiについて</h1>
                 <div class="company-info">
-                    <table class="table">
-                        <tr>
-                            <td class="company-info-left">Name</td><td class="company-info-right">levii Inc.</td>
-                        </tr>
-                        <tr>
-                            <td class="company-info-left">Founded</td><td class="company-info-right">May 17, 2016</td>
-                        </tr>
-                        <tr>
-                            <td class="company-info-left">Address</td><td class="company-info-right">4-1-3 Hongo, Bunkyo-ku, Tokyo 113-0033 Japan</td>
-                        </tr>
-                        <tr>
-                            <td class="company-info-left">CEO</td><td class="company-info-right">Yohsuke Nambu</td>
-                        </tr>
-                        <tr>
-                            <td class="company-info-left">Contact Us</td><td class="company-info-right">contact@levii.co.jp</td>
-                        </tr>
-                    </table>
+                    <dl class="dl-horizontal">
+                        <dt class="company-info-left">商号</dt><dd class="company-info-right">株式会社レヴィ（levii Inc.）</dd>
+                        <dt class="company-info-left">設立</dt><dd class="company-info-right">2016年5月17日</dd>
+                        <dt class="company-info-left">所在地</dt><dd class="company-info-right">〒113-0033 東京都文京区本郷4丁目1番3号</dd>
+                        <dt class="company-info-left">CEO</dt><dd class="company-info-right">南部 陽介</dd>
+                        <dt class="company-info-left">連絡先</dt><dd class="company-info-right">contact@levii.co.jp</dd>
+                    </dl>
                 </div>
-            </div>
-        </section>
+            </section>
+        </article>
 
         <!-- Footer -->
         <footer class="footer">
             <div class="text-center">
-                <p>Copyright &copy; 2016 levii Inc. All rights reserved.</p>
+                <p>Copyright © 2016 levii Inc. All rights reserved.</p>
             </div>
         </footer>
 
