--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- levii -->
         <link href="favicon.ico" rel="icon">
         <link href="https://fonts.googleapis.com/css?family=Roboto:100,400" rel="stylesheet">
-        <link href="http://fonts.googleapis.com/earlyaccess/notosansjp.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/earlyaccess/notosansjp.css" rel="stylesheet">
         <link href="css/levii.css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
