enディレクトリの追加

--- a/en/index.html
+++ b/en/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html lang="ja" prefix="og: http://ogp.me/ns#">
+<html lang="en" prefix="og: http://ogp.me/ns#">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <link rel="canonical" href="https://levii.co.jp">
-        <title>株式会社レヴィ</title>
+        <link rel="canonical" href="https://levii.co.jp/en/">
+        <title>levii Inc.</title>
 
         <!-- Open Graph protocol -->
-        <meta property="og:url" content="https://levii.co.jp">
-        <meta property="og:title" content="株式会社レヴィ">
-        <meta property="og:description" content="複雑さの中に価値と面白さを見つけよう。">
-        <meta property="og:site_name" content="株式会社レヴィ">
+        <meta property="og:url" content="https://levii.co.jp/en/">
+        <meta property="og:title" content="levii Inc.">
+        <meta property="og:description" content="Find values and funs in complexity.">
+        <meta property="og:site_name" content="levii Inc.">
         <meta property="og:image" content="https://levii.co.jp/images/og.jpg">
 
         <!-- Bootstrap -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="../css/bootstrap.min.css" rel="stylesheet">
 
         <!-- levii -->
         <link href="favicon.ico" rel="icon">
         <link href="https://fonts.googleapis.com/css?family=Roboto:100,400" rel="stylesheet">
         <link href="https://fonts.googleapis.com/earlyaccess/notosansjp.css" rel="stylesheet">
-        <link href="css/levii.css" rel="stylesheet">
+        <link href="../css/levii.css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -36,19 +36,19 @@
         <!-- Header -->
         <header class="header">
             <div class="header-language">
-                <p>日本語 | <a href="../en/">English</a></p>
+                <p><a href="../ja/">日本語</a> | English</p>
             </div>
             <div class="header-text text-horizontal-vertical-center">
                 <h1>levii</h1>
-                <p>複雑さの中に価値と面白さを見つけよう。</p>
+                <p>Find values and funs in complexity.</p>
             </div>
         </header>
 
         <!-- Products -->
         <article class="products">
             <section class="text-horizontal-vertical-center">
-                <h1>製品</h1>
-                <a href="https://app.balus.me" target="_blank"><img src="images/BALUS_logo.png" alt="BALUS Logo"></a>
+                <h1>Product</h1>
+                <a href="https://app.balus.me" target="_blank"><img src="../images/BALUS_logo.png" alt="BALUS Logo"></a>
                 <h2><a href="https://app.balus.me" target="_blank">BALUS</a></h2>
             </section>
         </article>
@@ -56,14 +56,14 @@
         <!-- Company -->
         <article class="company">
             <section class="text-horizontal-vertical-center">
-                <h1>leviiについて</h1>
+                <h1>About levii</h1>
                 <div class="company-info">
                     <dl class="dl-horizontal">
-                        <dt class="company-info-left">商号</dt><dd class="company-info-right">株式会社レヴィ（levii Inc.）</dd>
-                        <dt class="company-info-left">設立</dt><dd class="company-info-right">2016年5月17日</dd>
-                        <dt class="company-info-left">所在地</dt><dd class="company-info-right">〒113-0033 東京都文京区本郷4丁目1番3号</dd>
-                        <dt class="company-info-left">CEO</dt><dd class="company-info-right">南部 陽介</dd>
-                        <dt class="company-info-left">連絡先</dt><dd class="company-info-right">contact@levii.co.jp</dd>
+                        <dt class="company-info-left">Company Name</dt><dd class="company-info-right">levii Inc.</dd>
+                        <dt class="company-info-left">Founded</dt><dd class="company-info-right">May 17, 2016</dd>
+                        <dt class="company-info-left">Location</dt><dd class="company-info-right">4-1-3 Hongo, Bunkyo-ku, Tokyo 113-0033 Japan</dd>
+                        <dt class="company-info-left">CEO</dt><dd class="company-info-right">Yohsuke Nambu</dd>
+                        <dt class="company-info-left">Contact Us</dt><dd class="company-info-right">contact@levii.co.jp</dd>
                     </dl>
                 </div>
             </section>
@@ -79,6 +79,6 @@
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="js/bootstrap.min.js"></script>
+        <script src="../js/bootstrap.min.js"></script>
     </body>
 </html>
