--- a/ja/index.html
+++ b/ja/index.html
@@ -35,7 +35,10 @@
     <body>
         <!-- Header -->
         <header class="header">
-            <div class="text-horizontal-vertical-center">
+            <div class="header-language">
+                <p>日本語 | <a href="../en/">English</a></p>
+            </div>
+            <div class="header-text text-horizontal-vertical-center">
                 <h1>levii</h1>
                 <p>複雑さの中に価値と面白さを見つけよう。</p>
             </div>
