--- a/ja/index.html
+++ b/ja/index.html
@@ -18,10 +18,13 @@
         <!-- Bootstrap -->
         <link href="../css/bootstrap.min.css" rel="stylesheet">
 
+        <!-- Typekit -->
+        <script src="https://use.typekit.net/lkr8xne.js"></script>
+        <script>try{Typekit.load({ async: true });}catch(e){}</script>
+
         <!-- levii -->
         <link href="favicon.ico" rel="icon">
         <link href="https://fonts.googleapis.com/css?family=Roboto:100,400" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/earlyaccess/notosansjp.css" rel="stylesheet">
         <link href="../css/levii.css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
