BALUSの削除と年の更新の追加

--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
         <article class="products">
             <section class="text-horizontal-vertical-center">
                 <h1>製品</h1>
-                <a href="https://app.balus.me" target="_blank"><img src="images/BALUS_logo.png" alt="BALUS Logo"></a>
-                <h2><a href="https://app.balus.me" target="_blank">BALUS</a></h2>
+                <img src="images/BALUS_logo.png" alt="BALUS Logo">
             </section>
         </article>
 
@@ -75,7 +74,7 @@
         <!-- Footer -->
         <footer class="footer">
             <div class="text-center">
-                <p>Copyright © 2016 levii Inc. All rights reserved.</p>
+                <p>Copyright © 2017 levii Inc. All rights reserved.</p>
             </div>
         </footer>
 
