削除していたBALUSの復活

--- a/ja/index.html
+++ b/ja/index.html
@@ -51,7 +51,8 @@
         <article class="products">
             <section class="text-horizontal-vertical-center">
                 <h1>製品</h1>
-                <img src="../images/BALUS_logo.png" alt="BALUS Logo">
+                <a href="https://app.balus.me" target="_blank"><img src="../images/BALUS_logo.png" alt="BALUS Logo"></a>
+                <h2><a href="https://app.balus.me" target="_blank">BALUS（バルス）</a></h2>
             </section>
         </article>
 
