--- a/en/index.html
+++ b/en/index.html
@@ -48,8 +48,8 @@
         <article class="products">
             <section class="text-horizontal-vertical-center">
                 <h1>Product</h1>
-                <a href="https://app.balus.me" target="_blank"><img src="../images/BALUS_logo.png" alt="BALUS Logo"></a>
-                <h2><a href="https://app.balus.me" target="_blank">BALUS</a></h2>
+                <a href="https://site.balus.me" target="_blank"><img src="../images/BALUS_logo.png" alt="BALUS Logo"></a>
+                <h2><a href="https://site.balus.me" target="_blank">BALUS</a></h2>
             </section>
         </article>
 
